<resources>
    <string name="app_name">My Application</string>
    <string name="tv1">Lista de tareas:</string>
    <string name="tareas">Añadir o editar tareas</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="log">Acceder</string>
    <string name="recordar">Recordar este usuario</string>

    <string name="sumar">Añadir tarea</string>
    <string name="editar">Editar tarea</string>
    <string name="eliminar">Eliminar tarea</string>
    <string name="buscar">Buscar tarea</string>

    <string name="id">Identificador de la tarea</string>
    <string name="nombre">Nombre de la tarea</string>
    <string name="desc">Descripción de la tarea</string>
</resources>