<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tareas">

    <EditText
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nom" />


    <EditText
        android:id="@+id/nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id" />

    <EditText
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/id"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btSumar"
        android:layout_width="203dp"
        android:layout_height="42dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:onClick="Registrar"
        android:text="@string/sumar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc" />


    <Button
        android:id="@+id/btEliminar"
        android:layout_width="203dp"
        android:layout_height="42dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:onClick="Eliminar"
        android:text="@string/eliminar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btEditar" />

    <Button
        android:id="@+id/btEditar"
        android:layout_width="203dp"
        android:layout_height="42dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:onClick="Editar"
        android:text="@string/editar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btBuscar" />

    <Button
        android:id="@+id/btBuscar"
        android:layout_width="203dp"
        android:layout_height="42dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:onClick="Buscar"
        android:text="@string/buscar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btSumar" />

</androidx.constraintlayout.widget.ConstraintLayout>